fixed whitespace when scrolling down the page. added comments to await keyword in function "writeContent'

--- a/main.css
+++ b/main.css
@@ -11,7 +11,6 @@ html, body{
 .layout{
     box-sizing: border-box; /* this makes it very easy for side-by-side panels. the * means apply to all elements. */
     display: flex; /* stands for flexible box layout. */
-    background-color: transparent;
     align-items: stretch; /* makes both panels the same height */
     min-height: 100vh;
 }
@@ -37,11 +36,8 @@ p{
     padding: 20px;
     position: sticky;
     top: 0px;
-    height: 100vh;
     padding: 20px;
-    height: 100vh;
 
-    /* text */
     line-height: 50px;
     font-size: 20;
     color: white;
@@ -70,7 +66,6 @@ p{
     text-align: center;
     background-color: #282c34;
     color: white;
-    height: 100%;
     width: 100%;
 }
 
